--- a/vision/detection/MobileNet-SSD/config.yaml
+++ b/vision/detection/MobileNet-SSD/config.yaml
@@ -13,34 +13,23 @@ batch_sizes: [1, 4, 8, 16]
 int8_model: $(workdir)/$(name)_bmnetc_deploy_int8_unique_top.prototxt
 int8_weight: $(workdir)/$(name)_bmnetc.int8umodel
 
-BM1684:
-  fp_loops:
-    - build_env:
-        - BMCOMPILER_GROUP_SEARCH_COUNT=1
-      opt: "1"
-      dyn: "False"
-      fp_outdir_template: "static.opt1.fp32.{}b.compilation"
-      prec: FP32
-    - build_env:
-        - BMCOMPILER_GROUP_SEARCH_COUNT=1
-      opt: "2"
-      dyn: "True"
-      fp_outdir_template: "dynamic.opt2.fp32.{}b.compilation"
-      prec: FP32
-
 BM1684X:
   fp_loops:
     - build_env:
         - BMCOMPILER_GROUP_SEARCH_COUNT=1
-      opt: "1"
-      dyn: "False"
-      fp_outdir_template: "static.opt1.fp32.{}b.compilation"
+      fp_outdir_template: "{}b.fp32.compilation"
       prec: FP32
     - build_env:
+        - BMCOMPILER_LAYER_DTYPE_MODE=auto
         - BMCOMPILER_GROUP_SEARCH_COUNT=1
-      opt: "2"
-      dyn: "True"
-      fp_outdir_template: "dynamic.opt2.fp32.{}b.compilation"
+      fp_outdir_template: "{}b.fp16.compilation"
+      prec: FP16
+
+BM1684:
+  fp_loops:
+    - build_env:
+        - BMCOMPILER_GROUP_SEARCH_COUNT=1
+      fp_outdir_template: "{}b.fp32.compilation"
       prec: FP32
 
 int8_loops:
